--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     compile 'com.google.guava:guava:19.0'
     compile 'org.slf4j:slf4j-api:1.7.20'
     compile 'it.unimi.dsi:fastutil:7.0.11'
+    compile 'org.yaml:snakeyaml:1.17'
 }
 
 idea {
