--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     compile 'com.google.auto.value:auto-value:1.2'
     compile 'com.google.guava:guava:19.0'
     compile 'org.slf4j:slf4j-api:1.7.20'
+    compile 'ch.qos.logback:logback-classic:1.1.7'
     compile 'it.unimi.dsi:fastutil:7.0.11'
     compile 'org.yaml:snakeyaml:1.17'
 }
